compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__dynamic_size_with_unit.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1781
expression: "\npub fn main() {\n  let size = 3\n  <<1:size(size)-unit(2)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let size = 3
  <<1:size(size)-unit(2)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../gleam.mjs";

export function main() {
  let size = 3;
  return toBitArray([sizedInt(1, size * 2, true)]);
}
