compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__empty.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 11
expression: "\npub fn go() {\n  <<>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  <<>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export function go() {
  return toBitArray([]);
}
