compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__explicit_sized_constant_value.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 220
expression: "\npub fn go() {\n  <<256:size(32)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  <<256:size(32)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export function go() {
  return toBitArray([0, 0, 1, 0]);
}
